[2018-06-04 22:22:40 +0200]  Working on making advanced module smaller (first step, moving treev..      karasu      {5c84add1}
[2018-06-04 13:18:12 +0200]  Move partition treeview from advanced.py to partition_treeview.py (..      karasu      {bd64de3e}